fix spacing

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1032,7 +1032,7 @@ ul.dropdown-options {
     position: absolute;
     left: 16px;
     width: 232px;
-    top: 104px;
+    top: 80px;
     cursor: pointer;
 }
 
